--- a/index.html
+++ b/index.html
@@ -38,55 +38,89 @@
       <ul>
         <li class="gallery-item">
           <a href="#">
-            <img src="img/portfolio-1.png"
-            alt="Portfolio">
+            <img src="img/portfolio-1.png" alt="Marketing Page" />
             <h3>Marketing Page</h3>
-            <p>This Project shows front page of a marketing website meant for a specific business I'm interested in.</p>
+            <p>
+              This project shows the front page of a marketing website meant for a specific business I'm interested in.
+            </p>
           </a>
         </li>
 
         <li class="gallery-item">
           <a href="#">
-            <img src="img/portfolio-2.png"
-            alt="Portfolio">
-            <h3>Marketing Page</h3>
-            <p>This Project shows front page of a marketing website meant for a specific business I'm interested in.</p>
+            <img src="img/portfolio-2.png" alt="Search Page" />
+            <h3>Search Page</h3>
+            <p>
+              This project searches through a specific database to fing informaiton that the user is trying to look up.
+            </p>
           </a>
         </li>
 
         <li class="gallery-item">
           <a href="#">
-            <img src="img/portfolio-3.png"
-            alt="Portfolio">
-            <h3>Marketing Page</h3>
-            <p>This Project shows front page of a marketing website meant for a specific business I'm interested in.</p>
+            <img src="img/portfolio-3.png" alt="Travel App" />
+            <h3>Travel App</h3>
+            <p>
+              This project compares travel times based on different transportation methods and tells you the best one.
+            </p>
           </a>
         </li>
 
         <li class="gallery-item">
           <a href="#">
-            <img src="img/portfolio-4.png"
-            alt="Portfolio">
-            <h3>Marketing Page</h3>
-            <p>This Project shows front page of a marketing website meant for a specific business I'm interested in.</p>
+            <img src="img/portfolio-4.png" alt="Map of Favorite Sports" />
+            <h3>Map of Favorite Spots</h3>
+            <p>
+              This project uses mapping apis to plot points for my favorite sport in the city to a do-it-yourself walking tour.
+            </p>
           </a>
         </li>
 
         <li class="gallery-item">
           <a href="#">
-            <img src="img/portfolio-5.png"
-            alt="Portfolio">
-            <h3>Marketing Page</h3>
-            <p>This Project shows front page of a marketing website meant for a specific business I'm interested in.</p>
+            <img src="img/portfolio-5.png" alt="Photo Gallery" />
+            <h3>Photo Gallery</h3>
+            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
           </a>
         </li>
 
         <li class="gallery-item">
           <a href="#">
-            <img src="img/portfolio-6.png"
-            alt="Portfolio">
-            <h3>Marketing Page</h3>
-            <p>This Project shows front page of a marketing website meant for a specific business I'm interested in.</p>
+            <img src="img/portfolio-6.png" alt="Calculator" />
+            <h3>Calculator</h3>
+            <p>
+              Someone can enter in the numbers they want, and press the big blue button and get the result.
+            </p>
+          </a>
+        </li>
+
+        <li class="gallery-item">
+          <a href="#">
+            <img src="img/portfolio-7.png" alt="Video channel" />
+            <h3>Youtube channel</h3>
+            <p>
+              Beutiful aerial imagery captured around the world mixed in with happy ambiental sountracks.
+            </p>
+          </a>
+        </li>
+
+        <li class="gallery-item">
+          <a href="#">
+            <img src="img/portfolio-8.png" alt="Multimedia" />
+            <h3>Multimedia</h3>
+            <p>
+              A picture can say a thousands words but a video can say more than words can ever describe.
+            </p>
+          </a>
+        </li>
+
+        <li class="gallery-item">
+          <a href="#">
+            <img src="img/portfolio-9.png" alt="Web App" />
+            <h3>Web App</h3>
+            <p>
+              Web app developed using cutting edge technology for the fastest growing tech enviroment.
+            </p>
           </a>
         </li>
 
@@ -118,9 +152,9 @@
 
     <section class="contact" id="zoom">
       <h2>Contact</h2>
-      <p>If want to know more about my work or some friendly advice, please get in touch!</p>
-      <p><a href="tel:+440123444555">+44 0781 332 544</a></p>
-      <p><a href="mailto:andy.stoica@me.com">andy.stoica@me.com</a></p>
+      <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+      <p>Phone <a href="tel:+440123444555">+44 0781 332 544</a></p>
+      <p>Email <a href="mailto:andy.stoica@me.com">andy.stoica@me.com</a></p>
     </section>
   </main>
 
