--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#zoom">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -150,7 +150,7 @@
       </p>
     </section>
 
-    <section class="contact" id="zoom">
+    <section class="contact" id="contact">
       <h2>Contact</h2>
       <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
       <p>Phone <a href="tel:+440123444555">+44 0781 332 544</a></p>
