--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main-min.js"></script>
 
 </body>
 </html>
