--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
         <li>AngularJS</li>
         <li>Node.js</li>
         <li>MongoDB</li>
-        <li>PHP</li>
         <li>MySQL</li>
+        <li>PHP</li>
         <li>JAVA</li>
+        <li>Python</li>
       </ul>
       <p>
         <em>"Only one who devotes himself to a cause with his whole strength can be a true master. For this reason mastery demands all of a person"</em> - Albert Einstein
